交接文档: 37-heap-dumper/02 完结(102/152,37 域收官,第 5 批 11/13);§二 表格+commit 清单 19 篇;§五 素材 18 个(新增 37-heap-dumper-gzip-oome-demo.txt);§6.57 新经验(11 组漂移含 2 处编造: safepoint 外压缩/JFR 应急 dump,五路触发,executeJCmd 实证路径);§八 待办 39-runtime-monitoring/01(目录名 monitoring);§十 下一步